updating template path